Replace `new HashSet(List)` with Set.of()