@@ -32,9 +32,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
-import java.util.Arrays;
 import java.util.EnumSet;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -639,8 +637,7 @@ abstract class AbstractProcessorTest extends BaseTest {
 
                     // These are used in other tests, but ImageIO doesn't like
                     // them.
-                    if (new HashSet<>(Arrays.asList(
-                            "jpg-ycck.jpg", "jpg-icc-chunked.jpg")).contains(fixtureName)) {
+                    if (Set.of("jpg-ycck.jpg", "jpg-icc-chunked.jpg").contains(fixtureName)) {
                         continue;
                     }
 
